--- a/bistro-boss-client/package.json
+++ b/bistro-boss-client/package.json
@@ -11,18 +11,26 @@
   },
   "dependencies": {
     "@fontsource/playfair-display": "^5.1.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
+    "@tanstack/react-query": "^5.62.11",
+    "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-parallax": "^3.5.1",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
+    "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.15.5",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
